--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -3,25 +3,25 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     display: flex;
-    flex-direction: column; /* Stack items vertically */
-    align-items: center; /* Center horizontally */
-    height: 100vh; /* Full viewport height */
-    justify-content: flex-start; /* Start from the top */
+    flex-direction: column; 
+    align-items: center;
+    height: 100vh; 
+    justify-content: flex-start; 
 }
 
 h1 {
     text-align: center;
     color: #333;
-    margin-top: 20px; /* Space from top */
+    margin-top: 20px; 
 }
 
 .container {
-    width: 400px; /* Set a fixed width for the container */
+    width: 400px;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px; /* Space from title */
+    margin-top: 20px;
 }
 
 label {
@@ -37,40 +37,40 @@ input {
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    color: #333; /* Text color */
+    color: #333;
 }
 
 button {
     padding: 10px 20px;
-    background-color: #28a745; /* Green color for the Consult button */
+    background-color: #28a745;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    width: 68%; /* Full width for the Consult button */
+    width: 68%;
 }
 
 button:hover {
-    background-color: #218838; /* Darker green on hover */
+    background-color: #218838; 
 }
 
 .clear-button {
-    background-color: #17a2b8; /* Celeste color for the clear button */
-    width: calc(30.5%); /* One-third of the container width */
-    margin-top: 10px; /* Space from input container */
+    background-color: #17a2b8; 
+    width: calc(30.5%); 
+    margin-top: 10px; 
 }
 
 .clear-button:hover {
-    background-color: #138496; /* Darker celeste on hover */
+    background-color: #138496; 
 }
 
 .result-container {
-    width: 400px; /* Same width as input container */
+    width: 400px; 
     background-color: #e9ecef; /* Light gray background for result */
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    margin-top: 20px; /* Space from the clear button */
-    text-align: center; /* Center text */
+    margin-top: 20px; 
+    text-align: left; 
 }
